# aruco_ros

./: .gitignore  CMakeLists.txt  README.md  install_aruco.sh  nodelet_plugin.xml  nodelet_plugins.xml  package.xml
configFiles/: out_camera_params.yaml
configFiles/hrm/: boardConfig.yaml  dictionary.yaml
configFiles/regular/: boardConfig.yaml  out_boardConfig.yaml
include/aruco_ros/: aruco_ros_utils.h
launch/: aruco_boardtest.launch  aruco_hrm_boardtest.launch  aruco_hrm_markertest.launch  aruco_markertest.launch
src/: aruco_ros_utils.cpp  simple_double.cpp
src/nodelets/: .gitignore  hrm_board.cpp  hrm_marker.cpp  simple_board.cpp  simple_marker.cpp
